--- a/index.html
+++ b/index.html
@@ -1003,7 +1003,7 @@
                 </li>
                 {{if !Bizagi.AppModel.personalized}}
                 <li>
-                    <a href="http://www.bizagi.com/" target="_blank" class="biz-ex-bizagi">${Bizagi.Util.getResource('visitBizagi')}</a>
+                    <a href="https://waldos.com.mx/" target="_blank" class="biz-ex-bizagi">Viste Waldo's</a>
                 </li>
                 {{/if}}
             </ul>
